...
    @IBAction
    func backToMainViewController(segue: UIStoryboardSegue) { }
    
    @IBAction
    func deviceMonitorButton(sender: DeviceMonitorButton) {
        sender.animateTouchUpInside {
            let alarmSB = UIStoryboard(name: "Alarm", bundle: nil)
            let initialVC = alarmSB.instantiateInitialViewController()
            self.presentViewController(initialVC!, animated: true, completion: nil)
        }
    }

    override func prepareForSegue(segue: UIStoryboardSegue, sender: AnyObject?) {
...
