...
                    <rect key="frame" x="210" y="508" width="214" height="60"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="214" id="S7J-F3-bnQ"/>
                        <constraint firstAttribute="height" constant="60" id="zY1-zd-y9X"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="GothamPro" family="Gotham Pro" pointSize="16"/>
                    <state key="normal" title="Ok, Let's begin">
                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                            <integer key="value" value="27"/>
                        </userDefinedRuntimeAttribute>
...
