...
    }
    
    class func simpleMessage(title:String, message:String, image: UIImage?, uiViewController:UIViewController) {
        
        // The Custom iOS Alert
        
        let alertView = JSSAlertView().show(uiViewController, title: title, text: message, buttonTexts: ["OK"], color: SettingsTheme.theme01.blueColor.withAlphaComponent(0.7), iconImage: image)
        
        alertView.addAction({
            
            
            
        })
...
